// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItwDigitalVersionBadge should render correctly EuropeanDisabilityCard 1`] = `
<View
  style={
    {
      "bottom": 16,
      "position": "absolute",
      "right": 2,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginEnd": -8,
          "overflow": "hidden",
          "paddingEnd": 16,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#E8EEF4",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "alignSelf": "center",
            "flexShrink": 1,
            "fontFamily": "Titillio",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 16,
            "textTransform": "uppercase",
          },
          {
            "color": "#01527F",
          },
        ]
      }
    >
      Versione digitale
    </Text>
  </View>
</View>
`;

exports[`ItwDigitalVersionBadge should render correctly EuropeanHealthInsuranceCard 1`] = `
<View
  style={
    {
      "bottom": 16,
      "position": "absolute",
      "right": 2,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginEnd": -8,
          "overflow": "hidden",
          "paddingEnd": 16,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#ABD8F2",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "alignSelf": "center",
            "flexShrink": 1,
            "fontFamily": "Titillio",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 16,
            "textTransform": "uppercase",
          },
          {
            "color": "#032D5C",
          },
        ]
      }
    >
      Versione digitale
    </Text>
  </View>
</View>
`;

exports[`ItwDigitalVersionBadge should render correctly InvalidCredentialType 1`] = `null`;

exports[`ItwDigitalVersionBadge should render correctly MDL 1`] = `
<View
  style={
    {
      "bottom": 16,
      "position": "absolute",
      "right": 2,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderCurve": "continuous",
          "borderRadius": 24,
          "flexDirection": "row",
          "justifyContent": "center",
          "marginEnd": -8,
          "overflow": "hidden",
          "paddingEnd": 16,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        {
          "backgroundColor": "#FADCF5",
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        [
          {
            "alignSelf": "center",
            "flexShrink": 1,
            "fontFamily": "Titillio",
            "fontSize": 12,
            "fontStyle": "normal",
            "fontWeight": "400",
            "lineHeight": 16,
            "textTransform": "uppercase",
          },
          {
            "color": "#5E303E",
          },
        ]
      }
    >
      Versione digitale
    </Text>
  </View>
</View>
`;
